<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">Co Tuong 2019</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ai_game">Play with Android</string>
    <string name="net_game">Play online</string>
    <string name="quit">Quit</string>
    <string name="new_game">New game</string>
    <string name="back">Undo</string>
    <string name="over">Over</string>
    <string name="username">Username</string>
    <string name="join_host">Host</string>
    <string name="start_game">Start</string>
    <string name="red_side">Red</string>
    <string name="black_side">Black</string>
    <string name="your_color">Your Color</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="level">Level</string>
    <string name="draw">Draw</string>
    <string name="lost">Loss</string>
    <string name="return_main">Menu</string>
    <string name="empty"></string>
    <string name="nickname">Name</string>
    <string name="new_host">New Host</string>
    <string name="discovery">Find device</string>
    <string name="menu_sound">Turn on sound</string>
    <string name="menu_no_sound">Turn off sound</string>
    <string name="menu_day_mode">Day mode</string>
    <string name="menu_night_mode">New mode</string>
    <string name="ic_play">New Game</string>
    <string name="ic_undo">Undo</string>
    <string name="back_menu">Back to menu</string>
    <string name="msg_back_menu">Do you want to quit?</string>
    <string name="msg_exit_app">Do you want to exit app?</string>
    <string name="msg_reset_game">Do you want to reset game?</string>
    <string name="msg_undo">Can I undo? :(</string>
    <string name="exit">Exit</string>
    <string name="more_app">More apps</string>
    <string name="app_mod_id">ca-app-pub-9668231410043258~3608958479</string>
    <string name="banner_id">ca-app-pub-9668231410043258/2104305111</string>
    <string name="interstitial_id">ca-app-pub-9668231410043258/3263320025</string>
</resources>
