<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical"
    android:gravity="bottom|center_horizontal"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_ai_game"
        android:layout_width="220dp"
        android:layout_height="wrap_content"

        android:background="@drawable/button_normal"
        android:text="@string/ai_game"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_net_game"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/button_normal"
        android:text="@string/net_game"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
	<Button
        android:id="@+id/btn_more_app"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/button_normal"
        android:text="@string/more_app"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id" />

</LinearLayout>