<vn.singviet.cotuong2019.engine.ChessLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <vn.singviet.cotuong2019.engine.ChessView
        android:id="@+id/chess_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/btn_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chess_board"
        android:padding="5dp" >

        <Button
            android:id="@+id/btn_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_normal"
            android:text="@string/new_game"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_normal"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_normal"
            android:text="@string/draw"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_giveup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_normal"
            android:text="@string/lost"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_normal"
            android:text="@string/quit"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

<!--     <LinearLayout -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_below="@+id/btn_grid" -->
<!--         android:orientation="vertical" > -->

<!--         <TextView -->
<!--             android:id="@+id/text_info" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_weight="0" -->
<!--             android:gravity="center_vertical" -->
<!--             android:lineSpacingExtra="5dp" -->
<!--             android:lines="1" -->
<!--             android:paddingLeft="5dp" -->
<!--             android:paddingTop="5dp" -->
<!--             android:textAppearance="?android:attr/textAppearanceMedium" -->
<!--             android:textColor="#000000" -->
<!--             android:textSize="10dp" -->
<!--             android:typeface="normal" /> -->

<!--         <TextView -->
<!--             android:id="@+id/text_msg" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_weight="0.20" -->
<!--             android:paddingLeft="5dp" -->
<!--             android:textAppearance="?android:attr/textAppearanceMedium" -->
<!--             android:textColor="#000" -->
<!--             android:textSize="10dp" /> -->
<!--     </LinearLayout> -->

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_grid"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id" />

</vn.singviet.cotuong2019.engine.ChessLayout>